--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": false,
+    "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
@@ -38,5 +38,5 @@
     ".contentlayer/generated",
     "next.config.cjs",
   ],
-  "exclude": ["node_modules", ".next", ".contentlayer", ".prisma", "prisma", "./src/actions"],
+  "exclude": ["node_modules", ".next", ".contentlayer", ".prisma", "prisma", "./src/actions", "./into_app_folder_later"],
 }
